manifests/pods.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  labels:
    app: kibana
spec:
  selector:
    matchLabels:
      app: kibana
  replicas: 1
  template:
    metadata:
      labels:
        app: kibana
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: kibana-config
      containers:
        - name: kibana
          image: docker.elastic.co/kibana/kibana:7.5.1
          volumeMounts:
            - name: config-volume
              mountPath: /tmp/kibana.yaml
              subPath: kibana.yml
          ports:
            - containerPort: 5601
          resources:
            requests:
              cpu: "250m"
              memory: "500Mi"
            limits:
              cpu: "450m"
              memory: "600Mi"
          imagePullPolicy: Always
          livenessProbe:
            tcpSocket:
              port: 5601
            initialDelaySeconds: 5
      restartPolicy: Always
      imagePullSecrets:
        - name: regcred
